[package]
name = "async_smux"
version = "0.3.0"
authors = ["black-binary <blackbinary@qq.com>"]
description = "Asynchronous smux multiplexing library"
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.2"
rand = "0.8"
log = "0.4"
parking_lot = "0.12"
pin-project = "1.1"
thiserror = "1.0"
futures-sink = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
criterion = "0.4"
pprof = { version = "0.11", features = ["flamegraph"] }
lazy_static = "1.4"

[profile.release]
debug = true
