[package]
name = "async_smux"
version = "0.3.4"
authors = ["black-binary <blackbinary@qq.com>"]
description = "Asynchronous smux multiplexing library"
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.9"
log = "0.4"
parking_lot = "0.12"
thiserror = "2.0"
futures-sink = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.10"
lazy_static = "1.5"

[profile.release]
debug = true
